Feature/draw image (#136)
Co-authored-by: KingPrimes <Sakitama_q@163.com>